# harness-sdk

./: .gitignore  README.md  pyproject.toml
reference/: AI-HANDOFF.md  harness-gen-build-spec.md  harness-gen-quick-reference.md  harness-gen-reference.md
reference/shared/: README.md
reference/shared/agents/isolation/: backend-agent.md  frontend-agent.md
reference/shared/agents/non-isolation/: code-analyst.md
reference/shared/agents/non-isolation/planner/: SKILL.md
reference/shared/agents/non-isolation/planner/templates/: plan-multi.md.tmpl  plan-single.md.tmpl  role-plan.md.tmpl  status.yaml.tmpl
reference/shared/skills/lint-checker/: SKILL.md
src/agent_installer/: __init__.py  install.py
src/cli/: __init__.py  __main__.py  context.py  generate.py  init.py  plan.py  update.py  verify.py
src/registry/: __init__.py  fetcher.py
src/resolver/: __init__.py  imports.py  merger.py  overrides.py
src/synth/: __init__.py  claude_md.py  lockfile.py  manifest.py  settings_json.py
src/validators/: __init__.py  config_schema.py
tests/: conftest.py
tests/integration/: __init__.py  test_config_validation.py  test_context_command.py  test_generate_command.py  test_init_command.py  test_plan_command.py  test_registry_fetcher.py  test_update_command.py  test_verify_command.py
tests/integration/fixtures/: invalid_import_format.yaml  invalid_missing_required.yaml  missing_approved_by.yaml  valid_full.yaml  valid_minimal.yaml  warn_planner_in_tools.yaml
